<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/setting_item_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp">
        <RadioButton
            android:id="@+id/setting_item_radio_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/accent"
            android:text="@string/settings_changeLang_de"/>
        <RadioButton
            android:id="@+id/setting_item_radio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/accent"
            android:text="@string/settings_changeLang_en"/>
        <RadioButton
            android:id="@+id/setting_item_radio_tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/accent"
            android:text="@string/settings_changeLang_tr"/>

    </RadioGroup>

</RelativeLayout>